2002-04-18 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs.c: The diff editor is set to hilite as
	diff syntax hiliting.
	
	* configure.in, manual/Makefile.am:
	Added a new manual module for ja language.
	
	* manual/ja/*/*/*: New module and files for the
	ja translation for the anjuta documentation
	from Takeshi AIHANA <aihana@jcom.home.ne.jp>
	
2002-04-17 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/launcher.c: Made a very messy work around
	for the launcher authentication to work properly.
	
	* src/find_replace.c: Applied the missing patch
	from Dan Elphick <dre00r@ecs.soton.ac.uk>
	
2002-04-16 Andy Piper <andy.piper@freeuk.com>

	* src/cvs.c, src/main_menubar_def.h: made message strings
	consistent with existing standards from our own documentation 
	(such as uppercase P in Project, corrected spelling of 
	repository, etc.)

2002-04-16 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs_gui.c: Cleaned up gui and aligned various
	widgets to give a clean look.
	
2002-04-16 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/launcher.c: Added work around to retrieve
	the child exit code. It works. :)
	
	* src/find_in_files.c, src/gnome_project.c,
	src/project_import.c, src/cvs.c, src/configure.c, src/compile.c,
	src/clean.c, src/clean_project.c, src/build_project.c,
	src/build_file.c: Modified to handle the new
	child exit code.
	
2002-04-15 Dan Elphick <dre00r@ecs.soton.ac.uk>
 
 	* src/find_replace.c: Changed signal to call
 	on_replace_text_close on from delete_event
 	to close => the replace history is now updated.
 
2002-04-15 Naba Kumar <kh_naba@users.sourceforge.net>

	* src/cvs.c: escaped the cvs import message before
	passing it to cvs.
	
2002-04-14 Johannes Schmid <clubfan@users.sourceforge.net>

	Reviewed by Naba Kumar <kh_naba@users.sourceforge.net>
	
	* src/cvs.[c/h], src/texteditor.[c/h]: Fixed bug #542151
	
	* src/cvs.[c/h], src/cvs_cbs.[c/h], src/cvs_gui.[c/h]:
	Added cvs import
	
	* src/preferences_gui.c: GUI improvements
	